# speedomobile

./: .gitignore  .gitmodules  GPS.kicad_sch  LED_RIBBON.kicad_sch  LICENSE  README.md  _autosave-gps.kicad_sch  _autosave-slow_gpio.kicad_sch  analog.kicad_sch  current_sensor.kicad_sch  gps.kicad_sch  hall_sensor.kicad_sch  i2c.kicad_sch  ledribbon.kicad_sch  letmeknow.kicad_sym  power.kicad_sch  rfid.kicad_sch  slow_gpio.kicad_sch  speedomobile.kicad_pcb  speedomobile.kicad_prl  speedomobile.kicad_pro  speedomobile.kicad_sch  tsdz2.kicad_sch
additional.pretty/: 2.5mm2 hole.kicad_mod  OSHW-Logo2_9.8x8mm_Mask.kicad_mod  PMSA003I.kicad_mod  V48D.kicad_mod  VCB48.kicad_mod  bridge.kicad_mod
breakboard.pretty/: PN532.kicad_mod  TXS0108.kicad_mod  feather.kicad_mod  lsm9ds1.kicad_mod  mfrc522.kicad_mod  sdcard.kicad_mod
firmware/: CMakeLists.txt  common.h  dht.cpp  dht.h  imu.cpp  imu.h  imu20948def.h  imu_registers.h  lcd.cpp  lcd.h  main.cpp  rfid.cpp  rfid.h  uart.cpp  uart.h
firmware/fakearduino/: Arduino.cpp  Arduino.h  Print.cpp  Print.h  Wire.cpp  Wire.h
firmware/led/: main.cpp
hardware/: .gitignore
hardware/common/: lm285z-2.5.kicad_sym
hardware/i2c-daughter-board-measurement/: i2c-daughter-board-measurement.kicad_pcb  i2c-daughter-board-measurement.kicad_prl  i2c-daughter-board-measurement.kicad_pro  i2c-daughter-board-measurement.kicad_sch
hardware/main-board/: GPS.kicad_sch  (+10 more)
main-board/: LCD.kicad_sch  LED_RIBBON.kicad_sch  i2c.kicad_sch  main-board.kicad_pcb
speedomobile/: speedomobile.kicad_prl  speedomobile.kicad_sch-bak  tsdz2.kicad_sch
(+41 files in other folders)
